News UAT/force-app/main/default/objects/Portfolio_Owners__c/Portfolio_Owners__c.object-meta.xml
<CustomObject>
    <label>Portfolio Owners</label>
    <nameField>
        <label>Portfolio Owner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolio Owners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>