News UAT/force-app/main/default/objects/Portfolio_Owners__c/fields/Portfolio2__c.field-meta.xml
<CustomField>
    <fullName>Portfolio2__c</fullName>
    <label>Portfolio</label>
    <referenceTo>Portfolio2__c</referenceTo>
    <relationshipLabel>Portfolio Owners</relationshipLabel>
    <relationshipName>Portfolio_Teams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>