News UAT/force-app/main/default/objects/Portfolio_Owners__c/fields/Portfolio_Code__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Code__c</fullName>
    <formula>Portfolio2__r.Portfolio_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portfolio Code</label>
    <type>Text</type>
</CustomField>