News UAT/force-app/main/default/objects/Portfolio_Owners__c/fields/Portfolio_Owner__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Portfolio_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>