News UAT/force-app/main/default/objects/Portfolio_Owners__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Portfolio_Code__c</columns>
    <columns>Portfolio2__c</columns>
    <columns>Portfolio_Owner__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>